# MLP-Mixer-PyTorch

./: mixer.py  pyproject.toml  readme.md
