[tool.poetry]
name = "mlp-mixer"
version = "0.1.0"
description = ""
authors = ["Sanghyuk Lee <shylee2021@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
numpy = "^1.20.3"
torch = "^1.8.1"
torchvision = "^0.9.1"

[tool.poetry.dev-dependencies]
black = "^21.5b1"
ipykernel = "^5.5.5"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
